--- a/HMSProject/appsettings.json
+++ b/HMSProject/appsettings.json
@@ -1,12 +1,19 @@
 {
   "Data": {
-    "DbConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=hms_db;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DbConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=hms_db;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "MySQLConnectionString": "server=sql9.freesqldatabase.com; user=sql9579170; pwd=freesqlpassword123; database=sql9579170"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
+    },
+    "DbConnection": {
+      "Host": "sql9.freesqldatabase.com",
+      "UserName": "sql9579170",
+      "DatabaseName": "sql9579170",
+      "Password": "freesqlpassword123"
     }
   }
 }
