--- a/HMSProject/appsettings.json
+++ b/HMSProject/appsettings.json
@@ -1,6 +1,7 @@
 {
   "Data": {
     "DbConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=hms_db;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "AzureDbConnectionString": "Server=tcp:hms-ab-project.database.windows.net,1433;Initial Catalog=hms_db;Persist Security Info=False;User ID=hms-admin;Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     "MySQLConnectionString": "server=sql9.freesqldatabase.com; user=sql9579170; pwd=freesqlpassword123; database=sql9579170"
   },
   "Logging": {
